--- a/aula/.vscode/style.css
+++ b/aula/.vscode/style.css
@@ -29,6 +29,7 @@
 body{
 
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -180,3 +181,20 @@ body * {
     font-size: 14px;
 
  }
+
+
+
+
+ /*media queries*/
+
+ @media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light  {
+        -bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+ }
+
+ 
